# multilevel_senlcd

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  trident.toml
tridentiot-sdk/framework/common/tokens/generator/: CMakeLists.txt  token_json_gen.py  tr_generate_token_json.cmake
tridentiot-sdk/framework/utility/ring_buffer/: CMakeLists.txt  tr_ring_buffer.c  tr_ring_buffer.h
tridentiot-sdk/z-wave/: CMakeLists.txt  CMakePresets.json
tridentiot-sdk/z-wave/apps/: CMakeLists.txt
tridentiot-sdk/z-wave/apps/radio_cli/: CMakeLists.txt  README.md  cli_uart_interface.c  cli_uart_interface.h  radio_cli.dox  radio_cli_app.c  radio_cli_app.h  radio_cli_commands.c  radio_cli_commands.h  radio_cli_startup.c
tridentiot-sdk/z-wave/apps/window_sensor/: CMakeLists.txt  README.md  window_sensor.dox  window_sensor.yaml
tridentiot-sdk/z-wave/apps/window_sensor/src/: app.c  events.h
tridentiot-sdk/z-wave/apps/zniffer/: CMakeLists.txt  comm_interface.c  comm_interface.h  zniffer.dox  zniffer_app.c  zniffer_app.h  zniffer_startup.c
tridentiot-sdk/z-wave/cmake/: zw_create_app_external.cmake  zwsdk_generate_signing_keys.cmake
tridentiot-sdk/z-wave/lib/: libZWaveController.a.license
tridentiot-sdk/z-wave/modules/: CMakeLists.txt
tridentiot-sdk/z-wave/platform/: CMakeLists.txt
tridentiot-sdk/z-wave/platform/TridentIoT/: CMakeLists.txt  arm-gcc-toolchain-T32CZ20.cmake
tridentiot-sdk/z-wave/platform/TridentIoT/config/: partition.h  security_enable_config.h
tridentiot-sdk/z-wave/platform/TridentIoT/inc/: tr_platform.h  zpal_uart_gpio.h
tridentiot-sdk/z-wave/platform/TridentIoT/linkerscript/: tridentiot_gcc_T32CZ20.ld
tridentiot-sdk/z-wave/platform/apps/: CMakeLists.txt
tridentiot-sdk/z-wave/platform/apps/common/: local_cli.c  remote_cli.c  setup_common_cli.c  setup_common_cli.h
tridentiot-sdk/z-wave/platform/apps/door_lock_keypad/: CMakeLists.txt  door_lock.dox
tridentiot-sdk/z-wave/platform/apps/inc/: adc_drv.h  app_hw.h  apps_hw.h  rgb_led_drv.h
tridentiot-sdk/z-wave/platform/apps/led_bulb/: CMakeLists.txt  led_bulb.dox
tridentiot-sdk/z-wave/platform/apps/multilevel_sensor/: MultilevelSensor_common_hw.c
tridentiot-sdk/z-wave/platform/apps/power_strip/: CMakeLists.txt  power_strip.dox
tridentiot-sdk/z-wave/platform/apps/sensor_pir/: CMakeLists.txt  sensor_pir.dox
tridentiot-sdk/z-wave/platform/apps/serial_api/: CMakeLists.txt  serial_api.dox
tridentiot-sdk/z-wave/platform/apps/src/: adc_drv.c  apps_hw.c  board_indicator.c  board_init.c  firmware_properties.c  rgb_led_drv.c
tridentiot-sdk/z-wave/platform/apps/switch_on_off/: CMakeLists.txt  switch_on_off.dox
tridentiot-sdk/z-wave/platform/apps/wall_controller/: CMakeLists.txt  wall_controller.dox
tridentiot-sdk/z-wave/platform/apps/window_sensor/: CMakeLists.txt
tridentiot-sdk/z-wave/platform/boards/: tr_board_DKNCZ20.h  tr_board_perseus.h
tridentiot-sdk/z-wave/platform/libs/: CMakeLists.txt
tridentiot-sdk/z-wave/platform/libs/src/: s2_span_mpan_storage.c
tridentiot-sdk/z-wave/tools/: bootloader_app_merge.py  change_major_version_to_255.py  generate_jlink_command_file.py  generate_ozone_project_file.py  generate_unit_test_runner.py  image_size_tool.cmake  mem_usage.py  merge_hexfiles.py  ota_image_generate.py  ota_image_tool.cmake  public_key_json.py  tr_add_mock.cmake  tr_add_unity_test.cmake  verify_qr_code.py
tridentiot-sdk/z-wave/tools/modules/: qr_code_parser.py
tridentiot-sdk/z-wave/tools/templates/: ozone_project_file.jinja
tridentiot-sdk/z-wave/z-wave-stack/: CMakeLists.txt  CMakePresets.json
tridentiot-sdk/z-wave/z-wave-stack/Apps/: CMakeLists.txt
tridentiot-sdk/z-wave/z-wave-stack/Apps/zwave_ncp_serial_api/: CMakeLists.txt  SerialAPI_hw.h  app.c  app.h  app_node_info.h  cmd_get_capabilities.c  cmd_handlers.c  cmd_handlers.h  cmd_handlers_invoker.c  cmds_management.c  cmds_management.h  cmds_rf.c  cmds_rf.h  cmds_security.c  cmds_security.h  comm_interface.c  comm_interface.h  controller_supported_func.h  nvm_backup_restore.c  nvm_backup_restore.h  serialapi_file.c  serialapi_file.h  slave_supported_func.h  utils.c  utils.h  virtual_slave_node_info.c  virtual_slave_node_info.h
tridentiot-sdk/z-wave/z-wave-stack/Apps/zwave_soc_door_lock_keypad/: CMakeLists.txt  DoorLockKeyPad.yaml  app.c  app_cc_event_handlers.c  app_credentials.c  app_credentials.h  events.h
tridentiot-sdk/z-wave/z-wave-stack/Apps/zwave_soc_led_bulb/: CMakeLists.txt  app.c  events.h
tridentiot-sdk/z-wave/z-wave-stack/Apps/zwave_soc_multilevel_sensor/: CMakeLists.txt  app.c  events.h
tridentiot-sdk/z-wave/z-wave-stack/Apps/zwave_soc_power_strip/: CMakeLists.txt  app.c  events.h
tridentiot-sdk/z-wave/z-wave-stack/Apps/zwave_soc_sensor_pir/: CMakeLists.txt  SensorPIR_UserTask_DataAcquisition.c  SensorPIR_UserTask_DataAcquisition.h  app.c  events.h
tridentiot-sdk/z-wave/z-wave-stack/AppsHw/: CMakeLists.txt
tridentiot-sdk/z-wave/z-wave-stack/Components/: CMakeLists.txt
tridentiot-sdk/z-wave/z-wave-stack/Doc/: CMakeLists.txt  Doxyfile.cmake  Doxyfile.in  Doxyfile.zwave  cmake_filter.py  doxygen.css  style.css
tridentiot-sdk/z-wave/z-wave-stack/PAL/: CMakeLists.txt
tridentiot-sdk/z-wave/z-wave-stack/ZAF/: CMakeLists.txt
tridentiot-sdk/z-wave/z-wave-stack/ZWave/: CMakeLists.txt  ZW_CCList.c  ZW_CCList.h  ZW_DataLinkLayer_utils.c  ZW_DataLinkLayer_utils.h  ZW_MAC.h  ZW_NVMCaretaker.c  ZW_NVMCaretaker.h  ZW_Security_Scheme0.c  ZW_Security_Scheme0.h  ZW_Security_Scheme2.c  ZW_Security_Scheme2.h  ZW_UserTask.c  ZW_basis.h  ZW_build_tx_header.c  ZW_build_tx_header.h  ZW_ctimer.c  ZW_ctimer.h  ZW_dynamic_tx_power.c  ZW_dynamic_tx_power.h  ZW_dynamic_tx_power_algorithm.c  ZW_dynamic_tx_power_algorithm.h  ZW_event.c  ZW_event.h  ZW_explore.c  ZW_explore.h  ZW_explore_excl_req.c  ZW_explore_incl_req.c  ZW_frames_filters.c  ZW_frames_filters.h  ZW_home_id_generator.c  ZW_home_id_generator.h  ZW_home_id_hash.c  ZW_home_id_hash.h  ZW_ismyframe.c  ZW_ismyframe.h  ZW_keystore.c  ZW_keystore.h  ZW_libsec.h  ZW_lr_virtual_node_id.c  (+45 more)
tridentiot-sdk/z-wave/z-wave-stack/config/: zw_region_config.h
(+743 files in other folders)
